[project]
name = "har2tree"
version = "1.34.1"
description = "HTTP Archive (HAR) to ETE Toolkit generator"
authors = [
    {name="Raphaël Vinot", email="raphael.vinot@circl.lu"}
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.10,<3.15"

dynamic = [ "classifiers" ]

dependencies = [
    "ete3 (>=3.1.3)",
    "beautifulsoup4[charset-normalizer,lxml] (>=4.14.2)",
    "publicsuffixlist (>=1.0.2.20251107)",
    "filetype (>=1.2.0)",
    # poetry up fails with the version of numpy forced for python < 3.11.
    # The work around is to comment it, run poetry up, uncomment it. and run poetry update.
    "numpy (>=2.2,<2.3) ; python_version < '3.11'",
    "numpy (>=2.3.4) ; python_version >= \"3.11\" and python_version < \"4.0\"",
    "w3lib (>=2.3.1)",
    "tinycss2 (>=1.4.0)",
    "legacy-cgi (>=2.6.4) ; python_version >= \"3.13\" and python_version < \"4.0\"",
    "multipart (>=1.3.0,<2.0.0)",
    "json-stream (>=2.3.3,<3.0.0)",
    "requests-toolbelt (>=1.0.0,<2.0.0)"
]

[project.urls]
repository = "https://github.com/Lookyloo/har2tree"
issues = "https://github.com/Lookyloo/har2tree/issues"
documentation = "https://har2tree.readthedocs.io/en/latest/"

[tool.poetry]
classifiers = [
	'Operating System :: POSIX :: Linux',
	'Intended Audience :: Science/Research',
	'Intended Audience :: Telecommunications Industry',
	'Intended Audience :: Information Technology',
	'Topic :: Security',
	'Topic :: Internet'
]

[project.optional-dependencies]
docs = ["Sphinx (>=8.2.3) ; python_version >= \"3.11\"", "six (>=1.17.0)"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
pytest-cov = "^7.0.0"
coverage = "^7.11.1"
types-beautifulsoup4 = "^4.12.0.20250516"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
